@startuml
title Biểu đồ lớp - Thought Record có hỗ trợ AI

class PatientProfile {
  +id: UUID
  +nickname: String
  +anonymousModeEnabled: Boolean
}

class Journal {
  +id: UUID
  +journalType: String
  +contentEncrypted: String
  +aiRiskScore: Integer
  +severityLevel: String
  +createdAt: DateTime
}

class ThoughtRecordRequestDto {
  +situation: String
  +emotion: String
  +automaticThought: String
  +safetyBehaviors: List<String>
  +adaptiveResponse: String
}

class JournalDto {
  +id: UUID
  +journalType: String
  +aiRiskScore: Integer
  +severityLevel: String
}

class GuidedDiscoveryRequestDto {
  +situation: String
  +automaticThought: String
}

class GuidedDiscoveryResponseDto {
  +questions: List<String>
}

class CognitiveDistortionResponseDto {
  +distortions: List<String>
}

class JournalAiRiskResultDto {
  +aiRiskScore: Integer
  +severityLevel: String
  +reason: String
}

class JournalController {
  +saveThoughtRecord(request)
  +listThoughtRecords(patientId)
}

class AiController {
  +guidedDiscovery(request)
  +cognitiveDistortions(request)
}

class JournalService {
  +saveThoughtRecord(request)
}

class AiAssistantService {
  +guidedDiscovery(request)
  +cognitiveDistortions(request)
  +analyzeJournalRisk(content)
}

PatientProfile "1" -- "0..*" Journal
JournalController ..> JournalService
JournalController ..> ThoughtRecordRequestDto
JournalController ..> JournalDto
AiController ..> AiAssistantService
AiController ..> GuidedDiscoveryRequestDto
AiController ..> GuidedDiscoveryResponseDto
AiController ..> CognitiveDistortionResponseDto
JournalService ..> Journal
JournalService ..> JournalAiRiskResultDto
JournalService ..> AiAssistantService

note right of AiAssistantService
AI chỉ hỗ trợ:
- gợi ý câu hỏi Socratic
- gợi ý lỗi tư duy
- chấm aiRiskScore
Không thay thế quyết định lâm sàng.
end note

@enduml
